--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body{ /* body selecciona el cuerpo general y lo pinta */
-	background-color: skyblue; /* https://www.w3schools.com/colors/colors_names.asp */  
-	font-family: 'Open Sans', sans-serif;
+	background-color: blueviolet; /* https://www.w3schools.com/colors/colors_names.asp */  
+	font-family: 'Helvetica', sans-serif;
 			}
 
 #introduccion{/* selecciona el div y lo pinta */
