--- a/style.css
+++ b/style.css
@@ -1,91 +1,55 @@
+body {background-image: url(https://instrumentosdemedicion.org/wp-content/uploads/2021/04/engranaje.jpg);
+background-repeat: no-repeat;
+background-size: cover;}
 
-body{ /* body selecciona el cuerpo general y lo pinta */
-	background-color: blueviolet; /* https://www.w3schools.com/colors/colors_names.asp */  
-	font-family: 'comic sans ms', sans-serif;
-			}
+header {background-color: #B6CEF0;}
 
-#introduccion{/* selecciona el div y lo pinta */
-	width: 900px;
-	padding: 20px 0px;
-	margin: 0px;
-	background: purple;
-	margin: 0 auto; /* centrar elementos dentro de este div */
-	float: center;  /* otras opciones son left, right */
-}
+nav {background-color: #D5E1F4;}
 
-#contenedor{/* selecciona el div y lo pinta */
-	width: 900px; 
-	padding: 20px 0px;
-	margin: 0px;
-	background: gray;
-	margin: 0 auto; /* centrar elementos dentro de este div */
-	float: center;  /* otras opciones son left, right */
-}
+#grande {width: 960px;}
 
-div{/* selecciona el div y lo pinta */
-	width: 820px; 
-	padding: 20px;
-	margin: 20px 20px;
-	background: white;
-}
-#desarrollo{/* selecciona el id y lo pinta */
-	background-color: orange;
-	}
+section {background-color: #D3DDE9;
+margin: 10px;}
 
-h1{/* selecciona el header o titulo 1 y lo pinta */
-	background-color: pink;
-	width: 100%;
-	padding: 0px;
-	margin: 20px 0px;
-	border: 0px solid blue;
-	font-size: 28px;
-	color: hotpink;
-	text-align: center;
-	font-family: 'Merriweather', serif;
-	}
+article {background-color: #A5B1BD;}
 
-h2 {/* selecciona el header o titulo 3 y lo pinta */
-	background: pink;
-	font-size: 20px;
-	color: navy;
-	font-family: 'Merriweather', serif;
-	text-align: center;
-	}
+aside {display: relative;
+width: 250px;
+height: 250px;
+background-color: #D7D5F4;
+float: right;
+padding: 15px;
+font-family: sans-serif;}
 
-h3 {
-	font-family: 'Merriweather', serif;
-}
+#contenedor {width: 1000px;
+padding: 20px 0 px;
+margin: 0px;
+background: #E6ECF0;
+margin: 0 auto;
+float: center; 
+font-family: sans-serif;}
 
-p {/* selecciona el parrafo y lo pinta */
-	background-color: white;
-	width: 100%;
-	padding: 10px;
-	font-size: 18px;
-	}
+#título {
+margin: 10px;}
 
-img{/* selecciona las imagenes y las formatea */
-	border: 0px solid gray;
-	width: 100%;
-	}
+#autor {
+margin: 10px;}
 
+#resumen {
+margin: 10px;}
 
-.info-footer {
-  display: flex;
-  width: 100%;
-  background-color: #002a38;
-  line-height: 1.3;
-  font-family: Menlo, monospace;
-}
+#autor {
+margin: 10px;}
 
-.lista-footer {
-  display: inline-grid;
-  grid-template-columns: auto auto auto auto auto auto;
-  grid-auto-flow: row;
-  grid-gap: 24px;
-  justify-items: center;
-  margin: auto;
-}
+#diversidad {
+margin: 10px;}
 
-a{
-	color: white;
-}
+#necesidad {
+margin: 10px;}
+
+#evolucion {
+margin: 10px;}
+
+#referencias {
+margin: 10px;
+background-color: #D6DCE5;}
