--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 
-background-image: url(https://i.pinimg.com/564x/52/0c/55/520c555d36ddad29e426fe2f2a410370.jpg);
+background-color: #3A86FF;
 background-repeat: no-repeat;
 background-size: cover;
 }
@@ -18,31 +18,108 @@ nav {background-color: blue;}
 
 section {background-color: black;
 margin: 10px;
-color: white;}
+color: white;
+height: 500px;}
 
 .autores{
 font-family: 'Sedgwick Ave', cursive;
 position: absolute;
-top: 34%;
-left: 15%;
+font-size: 30px;
+top: 32%;
+left: 45%;
+}
+.fotoa1{
+	position: absolute;
+	top: 50%;
+	left: 20%;
+}
+.infoa1{
+	position: absolute;
+	top: 50%;
+	left: 35%;
+	right: 20%;
+	border: 5px solid #FF006E;
+border-radius: 15px;
+padding: 10px;
 }
 
+.fotoa2{
+position: absolute;
+top: 93%;
+right: 20%;
+}
+.infoa2{
+position: absolute;
+top: 90%;
+left: 20%;
+right: 35%;
+border: 5px solid #FF006E;
+border-radius: 15px;
+padding: 10px;
+}
+.fotoa3{
+	position: absolute;
+	top: 135%;
+	left: 18%;
+}
+.infoa3{
+	position: absolute;
+	top: 130%;
+	left: 35%;
+	right: 19%;
+	border: 5px solid #FF006E;
+border-radius: 15px;
+padding: 10px;
+
+}
 
 article {background-color: #A5B1BD;}
 
 aside {
 			display: relative;
-			width: 90px;
-			height: 650px;
+			width: 110px;
+			height: 1070px;
 			background-color: #FF006E;
 			float: right;
 			padding: 20px;
 			font-family: sans-serif;
-			position: absolute;
+			position: relative;
 			right: 2%;
 			border: 5px hidden #1C6EA4;
 border-radius: 15px 15px 15px 15px;
+border: 5px solid black;
+border-radius: 15px;
 		
+}
+.lado{
+	
+	float: left;
+	position: absolute;
+	top: 1%;
+	left:2%;
+border: 5px solid #000000;
+}
+.lado2{
+	position: absolute;
+	top: 150%;
+	left:2%;
+	border: 5px solid #000000;
+}
+.lado3{
+	position: absolute;
+	top: 300%;
+	left:2%;
+	border: 5px solid #000000;
+}
+.link{
+	font-size: 20px;
+	color: rebeccapurple;
+	background-color: black;
+	position: absolute;
+	top: 137%;
+	right: 3.5%;
+	font-family:sans-serif;
+	font-size: 16px;
 }
 
 #contenedor {
@@ -92,6 +169,9 @@ border-radius: 15px 15px 15px 15px;
 border-radius: 15px 15px 15px 15px;
 					
 }
+.fa-solid-fa-book-open{
+	top: 50%;
+}
 #iaproyecto {
 	        padding: 12px ;
 	        padding-right: 25px;
@@ -120,20 +200,10 @@ border-radius: 15px 15px 15px 15px;
 				margin: 10px;
 			}
 
-#autor {
-				margin: 10px;
-				
-			}
-
-
-
-#autor {
-				margin: 10px;
-				}
-
-
 #referencias {
 margin: 10px;
+top: 200%;
+position: absolute;
 background-color: #D6DCE5;}
 
 a:link {
@@ -142,3 +212,8 @@ a:link {
 a:visited {
 	color:#FF006E
 }
+.descripcion{
+background-color: black;
+margin: 10px;
+color: white;
+height: 3340px;}
